--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602117872"></script>
-      <script src="dom.js?v=1602117872"></script>
-      <script src="api.js?v=1602117872"></script>
-      <script src="index.js?v=1602117872"></script>
-      <script src="sbs2-markup/highlight.js?v=1602117872"></script>
-      <script src="sbs2-markup/parse.js?v=1602117872"></script>
-      <script src="sbs2-markup/render.js?v=1602117872"></script>
+      <script src="libbo.js?v=1602120004"></script>
+      <script src="dom.js?v=1602120004"></script>
+      <script src="api.js?v=1602120004"></script>
+      <script src="index.js?v=1602120004"></script>
+      <script src="sbs2-markup/highlight.js?v=1602120004"></script>
+      <script src="sbs2-markup/parse.js?v=1602120004"></script>
+      <script src="sbs2-markup/render.js?v=1602120004"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602117872" />
+      <link rel="stylesheet" href="index.css?v=1602120004" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -891,6 +891,7 @@ function retext(el, attr)
                         <ul class="uk-list uk-margin-remove-bottom">
                            <li><a data-editlink="href" data-spa>Edit Category</a></li>
                            <li><a data-newlink="href" data-spa>Add Category</a></li>
+                           <li><a data-newpagelink="href" data-spa>Add Page (MOVING!)</a></li>
                            <li><a href="#" data-viewraw>Raw Data</a></li>
                         </ul>
                      </div>
